[gd_scene load_steps=29 format=3 uid="uid://bsernuhmumsmw"]

[ext_resource type="Script" uid="uid://8tpw6mavbqkr" path="res://ui/tutorial_overlay.gd" id="1_bymr3"]
[ext_resource type="PackedScene" path="res://ui/tutorial_objectives.tscn" id="2_actuc"]
[ext_resource type="PackedScene" path="res://ui/tutorial_explanation.tscn" id="3_vd3ls"]

[sub_resource type="Animation" id="Animation_5kgf6"]
resource_name = "Objective_1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(503, 155), Vector2(51, 580)]
}

[sub_resource type="Animation" id="Animation_4bcgo"]
resource_name = "Objective_10"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(621.00006, 302), Vector2(990, 601)]
}

[sub_resource type="Animation" id="Animation_b1fve"]
resource_name = "Objective_11"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(990, 601), Vector2(523.00006, 352.00003)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ObjectivesLeft:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ObjectivesRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplanationTopRight:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExplanationBottomRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ip4t1"]
resource_name = "Objective_12"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333336, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(523.00006, 352.00003), Vector2(215, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ObjectivesLeft:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ObjectivesRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplanationTopRight:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExplanationBottomRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ObjectivesCenter:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nhil4"]
resource_name = "Objective_13"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(215, 24), Vector2(859, 419)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ObjectivesCenter:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ObjectivesRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t1yvq"]
resource_name = "Objective_14"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333336, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(859, 419), Vector2(854, 279.00003)]
}

[sub_resource type="Animation" id="Animation_p5tjj"]
resource_name = "Objective_15"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(854, 279.00003), Vector2(1135.0001, 23.000002)]
}

[sub_resource type="Animation" id="Animation_f5sre"]
resource_name = "Objective_16"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1135.0001, 23.000002), Vector2(548.00006, 630)]
}

[sub_resource type="Animation" id="Animation_tctkp"]
resource_name = "Objective_17"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(548.00006, 630), Vector2(1193, -53.99994)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplanationBottomRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplanationCenter:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hqxca"]
resource_name = "Objective_18"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1193, -53.99994), Vector2(795, 207.00002)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplanationBottomRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExplanationCenter:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xqd6p"]
resource_name = "Objective_19"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(795, 207.00002), Vector2(561.00006, 284.00003)]
}

[sub_resource type="Animation" id="Animation_actuc"]
resource_name = "Objective_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(51, 580), Vector2(135, 406.00003)]
}

[sub_resource type="Animation" id="Animation_jgpbp"]
resource_name = "Objective_20"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(561.00006, 284.00003), Vector2(438.00003, 103.00001)]
}

[sub_resource type="Animation" id="Animation_byqxq"]
resource_name = "Objective_21"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(438.00003, 103.00001), Vector2(1012, 399)]
}

[sub_resource type="Animation" id="Animation_i454q"]
resource_name = "Objective_22"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1012, 399), Vector2(562, 336)]
}

[sub_resource type="Animation" id="Animation_81erc"]
resource_name = "Objective_23"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(562, 336), Vector2(1073, 82.00001)]
}

[sub_resource type="Animation" id="Animation_vd3ls"]
resource_name = "Objective_3"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(135, 406.00003), Vector2(314.00003, 578), Vector2(314.00003, 578), Vector2(138, 405)]
}

[sub_resource type="Animation" id="Animation_5yink"]
resource_name = "Objective_4"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(138, 405), Vector2(251.00003, 578), Vector2(251.00003, 578), Vector2(237.99998, 334.00003)]
}

[sub_resource type="Animation" id="Animation_t1qsi"]
resource_name = "Objective_5"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(237.99998, 334.00003), Vector2(129, 579), Vector2(129, 579), Vector2(190.00002, 409.99997)]
}

[sub_resource type="Animation" id="Animation_pcebk"]
resource_name = "Objective_6"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(190.00002, 409.99997), Vector2(673, 228)]
}

[sub_resource type="Animation" id="Animation_2j2q6"]
resource_name = "Objective_7"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(673, 228), Vector2(541.00006, 316)]
}

[sub_resource type="Animation" id="Animation_1wos1"]
resource_name = "Objective_8"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(541.00006, 316), Vector2(641.00006, 267)]
}

[sub_resource type="Animation" id="Animation_3md8v"]
resource_name = "Objective_9"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(641.00006, 267), Vector2(621.00006, 302)]
}

[sub_resource type="Animation" id="Animation_8fmnp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Indicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(503, 155)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplanationTopRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ObjectivesLeft:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ObjectivesCenter:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExplanationBottomRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ExplanationCenter:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ObjectivesRight:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ExplanationBottomLeft:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_actuc"]
_data = {
&"Objective_1": SubResource("Animation_5kgf6"),
&"Objective_10": SubResource("Animation_4bcgo"),
&"Objective_11": SubResource("Animation_b1fve"),
&"Objective_12": SubResource("Animation_ip4t1"),
&"Objective_13": SubResource("Animation_nhil4"),
&"Objective_14": SubResource("Animation_t1yvq"),
&"Objective_15": SubResource("Animation_p5tjj"),
&"Objective_16": SubResource("Animation_f5sre"),
&"Objective_17": SubResource("Animation_tctkp"),
&"Objective_18": SubResource("Animation_hqxca"),
&"Objective_19": SubResource("Animation_xqd6p"),
&"Objective_2": SubResource("Animation_actuc"),
&"Objective_20": SubResource("Animation_jgpbp"),
&"Objective_21": SubResource("Animation_byqxq"),
&"Objective_22": SubResource("Animation_i454q"),
&"Objective_23": SubResource("Animation_81erc"),
&"Objective_3": SubResource("Animation_vd3ls"),
&"Objective_4": SubResource("Animation_5yink"),
&"Objective_5": SubResource("Animation_t1qsi"),
&"Objective_6": SubResource("Animation_pcebk"),
&"Objective_7": SubResource("Animation_2j2q6"),
&"Objective_8": SubResource("Animation_1wos1"),
&"Objective_9": SubResource("Animation_3md8v"),
&"RESET": SubResource("Animation_8fmnp")
}

[node name="TutorialOverlay" type="CanvasLayer"]
layer = 2
script = ExtResource("1_bymr3")

[node name="ObjectivesLeft" parent="." instance=ExtResource("2_actuc")]

[node name="ObjectivesCenter" parent="." instance=ExtResource("2_actuc")]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.0
offset_right = 145.0
grow_horizontal = 2

[node name="ObjectivesRight" parent="." instance=ExtResource("2_actuc")]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -290.0
offset_right = 0.0
grow_horizontal = 0

[node name="ExplanationBottomRight" parent="." instance=ExtResource("3_vd3ls")]
visible = false

[node name="ExplanationBottomLeft" parent="." instance=ExtResource("3_vd3ls")]
visible = false
anchors_preset = 2
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 416.0
grow_horizontal = 1

[node name="ExplanationCenter" parent="." instance=ExtResource("3_vd3ls")]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
offset_left = -208.0
offset_right = 208.0
grow_horizontal = 2

[node name="ExplanationTopRight" parent="." instance=ExtResource("3_vd3ls")]
anchors_preset = 1
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 50.0
grow_vertical = 1

[node name="TutorialAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_actuc")
}

[node name="Indicator" type="Node2D" parent="."]
position = Vector2(503, 155)
scale = Vector2(7, 7)

[node name="TutorialSprite2" type="Sprite2D" parent="Indicator"]
modulate = Color(0, 0, 0, 0.441)
show_behind_parent = true
position = Vector2(1.2000046, 2.0000038)
scale = Vector2(0.99999976, 0.99999976)

[node name="TutorialSprite1" type="Sprite2D" parent="Indicator"]
modulate = Color(1, 1, 1, 0.367)
scale = Vector2(0.99999994, 0.99999994)
